# web3-py-blockchain-demo

./: .gitignore  compile_local.py  main.py  pyproject.toml
contracts/: Calculator.sol  PhoneCompany.sol  SupplyChain.sol
